# housepricepredict

./: .gitignore  LICENSE  README.md  data_transform.py  estates.py  parser.py  queries.sql  raw_lst.txt  scrapper.py  simple_test.py  sqlconfig.config  store_data.py
.ipynb_checkpoints/: playground-checkpoint.ipynb
ml/: CMakeLists.txt  Dockerfile  env.sh  main.cpp  test.cpp  training.cpp  utils.cpp  utils.h
